--- a/index.html
+++ b/index.html
@@ -388,6 +388,21 @@
             <img src="/api/placeholder/400/300" alt="Imagen destacada 2" class="featured-image">
             <img src="/api/placeholder/400/300" alt="Imagen destacada 3" class="featured-image">
         </div>
+        <div class="participant-card">
+                <div class="participant-header" onclick="toggleDetails(this)">
+                    <img src="/api/placeholder/200/200" alt="Perfil de Ana Gómez" class="participant-profile">
+                    <div class="participant-info">
+                        <h3 class="participant-name">Ana Gómez</h3>
+                        <p class="participant-category">Categoría: Canto</p>
+                    </div>
+                    <span class="participant-score">92</span>
+                    <i class="fas fa-chevron-down dropdown-icon"></i>
+                </div>
+                <div class="participant-details">
+                    <p class="participant-description">Ana obtuvo una puntuación alta debido a su impresionante rango vocal y su perfecta afinación. Su interpretación de "Halo" de Beyoncé fue emotiva y técnicamente impecable.</p>
+                    <a href="https://youtube.com" target="_blank" class="watch-video">Ver Video</a>
+                </div>
+            </div>
     </section>
 
     <!-- Página de Registro/Participantes -->
