--- a/index.html
+++ b/index.html
@@ -363,8 +363,8 @@
     <nav class="navbar">
         <a href="#" class="logo">Concurso 2025</a>
         <div class="nav-links">
-            <a href="#" class="nav-link" onclick="showSection('inicio')">Inicio</a>
-            <a href="#" class="nav-link" onclick="showSection('registro')">Participantes</a>
+            <a href="#inicio" class="nav-link" onclick="showSection('inicio')">Inicio</a>
+            <a href="#registro" class="nav-link" onclick="showSection('registro')">Participantes</a>
             <a href="#" class="nav-link" onclick="showSection('ranking')">Ranking</a>
             <div class="dropdown">
                 <a href="#" class="nav-link" onclick="showSection('rondas')">Rondas</a>
