--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
     </div>
 
     <nav class="navbar">
-        <a href="#" class="logo">Concurso 2025</a>
+        <a href="#" class="logo">Beyond Loquendo</a>
         <div class="nav-links">
             <a href="#inicio" class="nav-link" onclick="showSection('inicio')">Inicio</a>
             <a href="#registro" class="nav-link" onclick="showSection('registro')">Participantes</a>
@@ -369,11 +369,11 @@
             <div class="dropdown">
                 <a href="#" class="nav-link" onclick="showSection('rondas')">Rondas</a>
                 <div class="dropdown-content">
-                    <a href="#" onclick="showSection('ronda1')">Ronda 1</a>
-                    <a href="#" onclick="showSection('ronda2')">Ronda 2</a>
-                    <a href="#" onclick="showSection('ronda3')">Ronda 3</a>
-                    <a href="#" onclick="showSection('ronda4')">Ronda 4</a>
-                    <a href="#" onclick="showSection('ronda5')">Ronda 5</a>
+                    <a href="#ronda1" onclick="showSection('ronda1')">Ronda 1</a>
+                    <a href="#ronda2" onclick="showSection('ronda2')">Ronda 2</a>
+                    <a href="#ronda3" onclick="showSection('ronda3')">Ronda 3</a>
+                    <a href="#ronda4" onclick="showSection('ronda4')">Ronda 4</a>
+                    <a href="#ronda5" onclick="showSection('ronda5')">Ronda 5</a>
                 </div>
             </div>
         </div>
