--- a/index.html
+++ b/index.html
@@ -5,115 +5,80 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Concurso</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
             margin: 0;
-            font-family: Arial, sans-serif;
+            font-family: 'Poppins', sans-serif;
             background: url('background.gif') no-repeat center center fixed;
             background-size: cover;
+            color: #fff;
         }
         .navbar {
-            background: black;
-            color: white;
+            background: rgba(0, 0, 0, 0.9);
             display: flex;
-            padding: 1rem;
-            justify-content: space-around;
+            justify-content: space-between;
+            padding: 1rem 2rem;
         }
         .navbar a {
-            color: white;
+            color: #fff;
             text-decoration: none;
-            margin: 0 15px;
-            font-size: 1.2rem;
+            margin: 0 1rem;
+            font-weight: bold;
         }
-        .section {
-            padding: 20px;
-            background: rgba(0, 0, 0, 0.7);
-            color: white;
-            border-radius: 10px;
-            margin: 20px;
+        .container {
+            margin: 2rem;
+            backdrop-filter: blur(10px);
+            background: rgba(0, 0, 0, 0.5);
+            border-radius: 12px;
+            padding: 2rem;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.7);
         }
         .participant {
             display: flex;
             align-items: center;
-            background: rgba(255, 255, 255, 0.1);
-            margin-bottom: 10px;
-            padding: 10px;
+            margin-bottom: 1rem;
+            background: rgba(0, 0, 0, 0.8);
             border-radius: 10px;
-            transition: transform 0.2s;
+            padding: 1rem;
         }
-        .participant:hover {
-            transform: scale(1.02);
+        .participant img {
+            width: 60px;
+            height: 60px;
+            border-radius: 10px;
+            object-fit: cover;
+            margin-right: 1rem;
         }
-        .profile-pic {
-            width: 50px;
-            height: 50px;
-            border-radius: 50%;
-            margin-right: 15px;
-        }
-        .video-btn {
+        .score {
             margin-left: auto;
-            padding: 5px 15px;
-            background: #ff4757;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background 0.2s;
-        }
-        .video-btn:hover {
-            background: #e84118;
+            font-size: 1.5rem;
+            color: #6eff3e;
+            font-weight: bold;
         }
     </style>
 </head>
 <body>
     <nav class="navbar">
-        <a href="#inicio">Inicio</a>
-        <a href="#registro">Registro</a>
-        <a href="#ranking">Ranking</a>
-        <a href="#rondas">Rondas</a>
+        <div>
+            <a href="#inicio">Inicio</a>
+            <a href="#registro">Registro</a>
+            <a href="#ranking">Ranking</a>
+            <a href="#rondas">Rondas</a>
+        </div>
     </nav>
-
-    <section id="inicio" class="section">
-        <h1>Bienvenidos al Concurso</h1>
-        <div style="display: flex; justify-content: space-around; margin-top: 20px;">
-            <div style="width: 100px; height: 100px; background: white; border-radius: 10px;"></div>
-            <div style="width: 100px; height: 100px; background: white; border-radius: 10px;"></div>
-            <div style="width: 100px; height: 100px; background: white; border-radius: 10px;"></div>
-        </div>
-    </section>
-
-    <section id="registro" class="section">
-        <h2>Registro de Participantes</h2>
+    <div class="container">
+        <h1>Participantes</h1>
         <div class="participant">
-            <img src="profile.jpg" alt="Foto de Perfil" class="profile-pic">
+            <img src="profile1.jpg" alt="Participante 1">
             <div>
-                <p>Nombre del Participante</p>
-                <button class="video-btn" onclick="window.open('https://youtube.com')">Ver Video</button>
+                <h3>Jimmy Mclovin</h3>
+                <p>Nota Win: 09.90</p>
+                <p>Nota Ozzy: 07.70</p>
+                <p>Nota Raiyuga: 08.50</p>
+                <p>Nota Wolf: 09.40</p>
             </div>
+            <div class="score">09.38</div>
         </div>
-    </section>
-
-    <section id="ranking" class="section">
-        <h2>Ranking</h2>
-        <div class="participant">
-            <img src="profile.jpg" alt="Foto de Perfil" class="profile-pic">
-            <div>
-                <p>Nombre del Participante</p>
-                <p>Puntuación: 100</p>
-            </div>
-        </div>
-    </section>
-
-    <section id="rondas" class="section">
-        <h2>Rondas</h2>
-        <div class="participant">
-            <img src="profile.jpg" alt="Foto de Perfil" class="profile-pic">
-            <div>
-                <p>Nombre del Participante</p>
-                <p>Puntuación: 90</p>
-                <button class="video-btn" onclick="window.open('https://youtube.com')">Ver Video</button>
-            </div>
-        </div>
-    </section>
+    </div>
 </body>
 </html>
