--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Concurso</title>
+    <!-- Tipografía moderna -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+
     <style>
+        /* Estilos generales */
         body {
             margin: 0;
             font-family: 'Poppins', sans-serif;
@@ -14,6 +17,8 @@
             background-size: cover;
             color: #fff;
         }
+
+        /* Navbar */
         .navbar {
             background: rgba(0, 0, 0, 0.9);
             display: flex;
@@ -26,6 +31,8 @@
             margin: 0 1rem;
             font-weight: bold;
         }
+
+        /* Contenedor principal */
         .container {
             margin: 2rem;
             backdrop-filter: blur(10px);
@@ -34,6 +41,38 @@
             padding: 2rem;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.7);
         }
+
+        /* Secciones internas */
+        section {
+            margin-bottom: 3rem;
+        }
+
+        /* Sección INICIO: foto + info torneo */
+        #inicio img {
+            max-width: 100%;
+            border-radius: 10px;
+            margin-top: 1rem;
+        }
+
+        /* Filtro de categorías */
+        .filter {
+            margin-bottom: 1rem;
+        }
+        .filter label {
+            margin-right: 0.5rem;
+        }
+        .filter select {
+            padding: 0.3rem 0.5rem;
+            border-radius: 5px;
+            border: none;
+            outline: none;
+        }
+
+        /* Participantes */
+        .participants {
+            display: flex;
+            flex-direction: column;
+        }
         .participant {
             display: flex;
             align-items: center;
@@ -41,6 +80,10 @@
             background: rgba(0, 0, 0, 0.8);
             border-radius: 10px;
             padding: 1rem;
+            transition: transform 0.2s;
+        }
+        .participant:hover {
+            transform: scale(1.02);
         }
         .participant img {
             width: 60px;
@@ -52,12 +95,29 @@
         .score {
             margin-left: auto;
             font-size: 1.5rem;
-            color: #6eff3e;
             font-weight: bold;
+        }
+        /* Etiquetas de categoría */
+        .tag {
+            display: inline-block;
+            padding: 0.2rem 0.5rem;
+            border-radius: 5px;
+            margin-left: 1rem;
+            font-weight: bold;
+        }
+        .rojo {
+            background-color: #ff4d4d;
+        }
+        .verde {
+            background-color: #3ae374;
+        }
+        .azul {
+            background-color: #1e90ff;
         }
     </style>
 </head>
 <body>
+    <!-- NAVBAR -->
     <nav class="navbar">
         <div>
             <a href="#inicio">Inicio</a>
@@ -66,19 +126,48 @@
             <a href="#rondas">Rondas</a>
         </div>
     </nav>
-    <div class="container">
-        <h1>Participantes</h1>
-        <div class="participant">
-            <img src="profile1.jpg" alt="Participante 1">
-            <div>
-                <h3>Jimmy Mclovin</h3>
-                <p>Nota Win: 09.90</p>
-                <p>Nota Ozzy: 07.70</p>
-                <p>Nota Raiyuga: 08.50</p>
-                <p>Nota Wolf: 09.40</p>
-            </div>
-            <div class="score">09.38</div>
+
+    <!-- INICIO: foto + info torneo -->
+    <section id="inicio" class="container">
+        <h1>Bienvenidos al Torneo XYZ</h1>
+        <p>¡Participa en el torneo más emocionante del año! Aquí encontrarás información sobre fechas, reglas y mucho más.</p>
+        <img src="tu_imagen_del_torneo.jpg" alt="Imagen del Torneo" />
+    </section>
+
+    <!-- REGISTRO: participantes con filtro por categoría -->
+    <section id="registro" class="container">
+        <h2>Registro de Participantes</h2>
+        <div class="filter">
+            <label for="category-filter">Filtrar por categoría:</label>
+            <select id="category-filter">
+                <option value="all">Todos</option>
+                <option value="rojo">Rojo</option>
+                <option value="verde">Verde</option>
+                <option value="azul">Azul</option>
+            </select>
         </div>
-    </div>
-</body>
-</html>
+        <div id="participants" class="participants">
+            <!-- Ejemplo de participante - Rojo -->
+            <div class="participant" data-category="rojo">
+                <img src="profile1.jpg" alt="Participante 1" />
+                <div>
+                    <h3>Jimmy Mclovin <span class="tag rojo">Rojo</span></h3>
+                    <p>Nota Win: 09.90</p>
+                    <p>Nota Ozzy: 07.70</p>
+                    <p>Nota Raiyuga: 08.50</p>
+                    <p>Nota Wolf: 09.40</p>
+                </div>
+                <div class="score" style="color: #6eff3e;">09.38</div>
+            </div>
+            <!-- Ejemplo de participante - Verde -->
+            <div class="participant" data-category="verde">
+                <img src="profile2.jpg" alt="Participante 2" />
+                <div>
+                    <h3>Laura Johnson <span class=\"tag verde\">Verde</span></h3>
+                    <p>Nota Win: 08.50</p>\n                    <p>Nota Ozzy: 09.00</p>\n                    <p>Nota Raiyuga: 07.75</p>\n                    <p>Nota Wolf: 08.90</p>\n                </div>\n                <div class=\"score\" style=\"color: #6eff3e;\">08.54</div>\n            </div>\n            <!-- Ejemplo de participante - Azul -->\n            <div class=\"participant\" data-category=\"azul\">\n                <img src=\"profile3.jpg\" alt=\"Participante 3\" />\n                <div>\n                    <h3>Marcos Pérez <span class=\"tag azul\">Azul</span></h3>\n                    <p>Nota Win: 09.80</p>\n                    <p>Nota Ozzy: 08.50</p>\n                    <p>Nota Raiyuga: 09.00</p>\n                    <p>Nota Wolf: 09.20</p>\n                </div>\n                <div class=\"score\" style=\"color: #6eff3e;\">09.13</div>\n            </div>\n        </div>\n    </section>
+
+    <!-- RANKING: listado de participantes por puntuación acumulada -->
+    <section id="ranking" class="container">
+        <h2>Ranking</h2>
+        <p>Próximamente: listado de participantes con mayor puntuación acumulada.</p>
+        <!-- Aquí se puede implementar la lógica para el ranking final -->\n    </section>\n\n    <!-- RONDAS: detalle de cada ronda -->\n    <section id=\"rondas\" class=\"container\">\n        <h2>Rondas</h2>\n        <p>Aquí podrás ver los detalles de cada ronda, videos, puntuaciones, etc.</p>\n        <!-- Se pueden agregar sub-secciones para Ronda 1, Ronda 2, etc. -->\n    </section>\n\n    <script>\n        // Filtro de categorías para participantes\n        const categorySelect = document.getElementById('category-filter');\n        const participantItems = document.querySelectorAll('.participant');\n\n        categorySelect.addEventListener('change', function() {\n            const selectedCategory = this.value;\n            participantItems.forEach(participant => {\n                const participantCategory = participant.getAttribute('data-category');\n                if (selectedCategory === 'all' || participantCategory === selectedCategory) {\n                    participant.style.display = 'flex';\n                } else {\n                    participant.style.display = 'none';\n                }\n            });\n        });\n    </script>\n</body>\n</html>\n"}]}
