--- a/index.html
+++ b/index.html
@@ -164,7 +164,13 @@
                 <img src="profile2.jpg" alt="Participante 2" />
                 <div>
                     <h3>Laura Johnson <span class=\"tag verde\">Verde</span></h3>
-                    <p>Nota Win: 08.50</p>\n                    <p>Nota Ozzy: 09.00</p>\n                    <p>Nota Raiyuga: 07.75</p>\n                    <p>Nota Wolf: 08.90</p>\n                </div>\n                <div class=\"score\" style=\"color: #6eff3e;\">08.54</div>\n            </div>\n            <!-- Ejemplo de participante - Azul -->\n            <div class=\"participant\" data-category=\"azul\">\n                <img src=\"profile3.jpg\" alt=\"Participante 3\" />\n                <div>\n                    <h3>Marcos Pérez <span class=\"tag azul\">Azul</span></h3>\n                    <p>Nota Win: 09.80</p>\n                    <p>Nota Ozzy: 08.50</p>\n                    <p>Nota Raiyuga: 09.00</p>\n                    <p>Nota Wolf: 09.20</p>\n                </div>\n                <div class=\"score\" style=\"color: #6eff3e;\">09.13</div>\n            </div>\n        </div>\n    </section>
+                    <p>Nota Win: 08.50</p>
+                    <p>Nota Ozzy: 09.00</p>
+                    <p>Nota Raiyuga: 07.75</p>
+                    <p>Nota Wolf: 08.90</p>
+                </div> 
+                <div class=\"score\" style=\"color: #6eff3e;\">08.54</div></div><!-- Ejemplo de participante - Azul -->\n            
+            <div class=\"participant\" data-category=\"azul\">\n                <img src=\"profile3.jpg\" alt=\"Participante 3\" />\n                <div>\n                    <h3>Marcos Pérez <span class=\"tag azul\">Azul</span></h3>\n                    <p>Nota Win: 09.80</p>\n                    <p>Nota Ozzy: 08.50</p>\n                    <p>Nota Raiyuga: 09.00</p>\n                    <p>Nota Wolf: 09.20</p>\n                </div>\n                <div class=\"score\" style=\"color: #6eff3e;\">09.13</div>\n            </div>\n        </div>\n    </section>
 
     <!-- RANKING: listado de participantes por puntuación acumulada -->
     <section id="ranking" class="container">
