--- a/index.html
+++ b/index.html
@@ -42,11 +42,20 @@
 </head>
 <body>
   <!-- NAVBAR -->
-  <nav class="navbar">
+   <nav class="navbar">
     <a href="index.html">Inicio</a>
     <a href="registro.html">Registro</a>
     <a href="ranking.html">Ranking</a>
-    <a href="rondas.html">Rondas</a>
+    <div class="dropdown">
+      <a href="rondas.html" class="dropbtn">Rondas</a>
+      <div class="dropdown-content">
+        <a href="ronda1.html">Ronda 1</a>
+        <a href="ronda2.html">Ronda 2</a>
+        <a href="ronda3.html">Ronda 3</a>
+        <a href="ronda4.html">Ronda 4</a>
+        <a href="ronda5.html">Ronda 5</a>
+      </div>
+    </div>
   </nav>
 
   <!-- INICIO: Información del torneo -->
